# intake-dataframe-catalog

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  README.rst  dfcat.yaml  dfcat2.csv  environment-dev.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  sandpit.ipynb  setup.cfg  setup.py  test.csv  test.yaml  tox.ini
.conda/: environment.yml  meta.yaml
.github/workflows/: cd.yml  ci.yml  conda_build.yml  conda_test.yml  deploy.yml  pip_build.yml  release.yml  tests.yml
binder/: environment.yml
ci/: environment-3.10.yml  environment-3.11.yml  environment-3.12.yml  environment-3.13.yml  environment-3.8.yml  environment-3.9.yml
docs/: conf.py  environment-doc.yaml  environment-doc.yml  index.rst
docs/getting_started/: example_catalog.csv  index.rst  installation.rst  quickstart.ipynb
docs/reference/: api.rst  changelog.rst  index.rst
intake_dataframe_catalog/: __init__.py  _search.py  core.py
intake_meta_esm/: _version.py  core.py
src/intake_dataframe_catalog/: __init__.py  _display.py  _search.py  _utils.py  _version.py  core.py
tests/: conftest.py  test_core.py  test_display.py  test_search.py  test_search_helper_snapshots.py  test_utils.py
tests/data/: dfcat.csv
tests/data/catalogs/: dfcat.csv  dfcat.parquet  metacatalog.parquet  search_result.parquet
tests/data/source/: cesm.csv  cesm.json  cmip5.csv  cmip5.json  cmip6.csv  cmip6.json  csv_source.csv  esm_source.json  textfile_source.txt
