[project]
name = "intake_dataframe_catalog"
authors = [
    { name = "ACCESS-NRI" },
]
description = "An intake driver for a searchable table of intake catalogs and associated metadata"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "intake",
    "pandas",
]
dynamic = ["version"]

[project.entry-points."intake.drivers"]
df_catalog = "intake_dataframe_catalog.core:DfFileCatalog"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 61.0.0",
  "versioneer[toml]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=./src --cov-report=xml"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/intake_dataframe_catalog/_version.py"
versionfile_build = "intake_dataframe_catalog/_version.py"
tag_prefix = "v"
parentdir_prefix = "intake-dataframe-catalog-"

[tool.coverage.run]
omit = [
    "src/intake_dataframe_catalog/_version.py",
]
  
