[project]
name = "intake_dataframe_catalog"
authors = [
    { name = "ACCESS-NRI" },
]
description = "An intake driver for a searchable table of intake sources and associated metadata"
readme = "README.rst"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "intake >= 0.7.0",
    "pandas",
    "polars>=1.12"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "tox",
]

[project.entry-points."intake.drivers"]
df_catalog = "intake_dataframe_catalog.core:DfFileCatalog"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 61.0.0",
  "versioneer[toml]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=./src --cov-report=xml"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/intake_dataframe_catalog/_version.py"
versionfile_build = "intake_dataframe_catalog/_version.py"
tag_prefix = "v"
parentdir_prefix = "intake-dataframe-catalog-"

[tool.coverage.run]
omit = [
    "src/intake_dataframe_catalog/_version.py",
]

[tool.ruff]
target-version = "py39"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
ignore = [
    "E402",
    "E501",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.isort]
known-first-party = ["intake_dataframe_catalog"]

