[project]
name = "intake_dataframe_catalog"
authors = [
    { name = "ACCESS-NRI" },
]
description = "An intake driver for a searchable table of intake sources and associated metadata"
readme = "README.rst"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "intake >= 0.7.0",
    "itables",
    "pandas",
    "polars>=1.12"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "tox",
]

[project.entry-points."intake.drivers"]
df_catalog = "intake_dataframe_catalog.core:DfFileCatalog"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 61.0.0",
  "versioneer[toml]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=./src --cov-report=xml"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/intake_dataframe_catalog/_version.py"
versionfile_build = "intake_dataframe_catalog/_version.py"
tag_prefix = "v"
parentdir_prefix = "intake-dataframe-catalog-"

[tool.coverage.run]
omit = [
    "src/intake_dataframe_catalog/_version.py",
    "*/tests/*",
]

[tool.ruff]
target-version = "py39"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
ignore = [
    "E402",
    "E501",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.isort]
known-first-party = ["intake_dataframe_catalog"]

[tool.pixi.workspace]
channels = ["conda-forge","accessnri"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.environments]
default = { features = ["dev","py313"], solve-group = "default" }
test-py310 = { features = ["py310", "test"] }
test-py311 = { features = ["py311", "test"] }
test-py312 = { features = ["py312", "test"] }
test-py313 = { features = ["py313", "test"] }

[tool.pixi.feature.dev.pypi-dependencies]
intake_dataframe_catalog = { path = ".", editable = true }

[tool.pixi.feature.test.pypi-dependencies]
intake_dataframe_catalog = { path = ".", editable = false }

[tool.pixi.feature.test.tasks]
test = {cmd = "pytest tests", description = "Run tests"}
test-cov = {cmd = "pytest -s --cov=intake_dataframe_catalog --cov-report=xml tests && coverage xml", description = "Run tests with coverage and generate xml report"}

[tool.pixi.feature.test.dependencies]
pytest = ">=8.4.1,<9"
pytest-cov = ">=7.0.0,<8"
xarray = ">=2025.6.1,<2026"
intake-esm-access = { version = ">=2025.10.14,<2026", channel = "accessnri" }

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"
